--- a/action.yml
+++ b/action.yml
@@ -1,5 +1,5 @@
 name: 'Push Docker Image'
-description: 'Push your Docker Image to ACR'
+description: 'Push your Docker Image to your Registry'
 author: "julio.arruda@outlook.com"
 inputs:
   acr-tokenname:  # token to auht acr
