Update files to push base image to github packages

--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -15,4 +15,12 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file base/Dockerfile --tag docker.pkg.github.com/julioarruda/pushimagetoacr/ubuntu1804:$(date +%s)
+      run: docker build . --file base/Dockerfile --tag docker.pkg.github.com/julioarruda/pushimagetoregistry/ubuntu1804:$(date +%s)
+
+    - name: Push Image to ACR
+      uses: julioarruda/pushimagetoregistry@v0
+      with:
+        acr-tokenname: julioarruda
+        acr-token: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN_PACKAGES }}
+        acr-account: docker.pkg.github.com
+        acr-imagename: docker.pkg.github.com/julioarruda/pushimagetoregistry/ubuntu1804:$(date +%s)
