Update action to use docker image on github packages

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:18.04
+FROM docker.pkg.github.com/julioarruda/pushimagetoregistry/ubuntu1804:1589062404
 
 RUN apt-get update
 RUN apt-get -y install apt-transport-https ca-certificates curl gnupg2 software-properties-common gnupg wget
