--- a/.github/workflows/dockerimage.yml
+++ b/.github/workflows/dockerimage.yml
@@ -2,9 +2,8 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+    paths:
+    - 'base/**'
 
 env:
   dockerImageName: docker.pkg.github.com/julioarruda/pushimagetoregistry/ubuntu1804:$(date +%s)
